fixed missing skill

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <li>HTML, CSS, JavaScript</li>
                     <li>SQL</li>
                     <li>C#, XAML</li>
-                    <li>Data Structures</li>
+                    <li>Data Structures and Algorithms</li>
                     <li>Logic Design, Multisim, Vivado, VHDL, FPGAs</li>
                     <li>Calculus I, II, III</li>
                 </ul>
