--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p2>experience<br></p2>
                 <p3>Status...</p3>
                 <span>
-                    <p4>Software Engineer co-op @ </p4>
+                    <p4>Software Solutions Engineer Co-op @ </p4>
                     <p5><a href="https://www.igear.com/">iGear</a></p5>
                 </span>
                 <p6><br><br><br></p6>
@@ -117,7 +117,7 @@
                 
                 <div id=exp-container>
                     <div id="title-display">
-                        Software Engineer Co-op
+                        Software Solutions Engineer Co-op
                     </div>
                     <div>
                         <a href="https://www.igear.com/" id="company-display">iGear</a>
