updated about me

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </p6>
                 <p8>
                     <br><br>
-                    I'm also a Student Success Ambassador who guides freshman engineering students through their first year of college! This includes regular communication/meetings, holding weekly office hours, and working alongside introductory engineering course professors.
+                    I've also served as a Student Success Ambassador who guides freshman engineering students through their first year of college! This includes regular communication/meetings, holding weekly office hours, and working alongside introductory engineering course professors.
                 </p8>
                 <p8>
                     <br><br>
