--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <pName>Cole Swinford.<br></pName>
                 <pTagline>I build things.<br></pTagline>
                 <p>I'm a Computer Science and Engineering student at the University of Louisville. In my free time, I pick up new programming languages and work on personal/organization projects.</p>
-                <a href="#about" class="welcome-btn">take me away</a>
+                <a href="#about" class="welcome-btn">about me</a>
             </div>
         </section>
 
@@ -53,7 +53,7 @@
             <div class="about-text">
                 <p1>/</p1>
                 <p2>about me<br></p2>
-                <p3>Hello! My name is Cole Swinford, and I enjoy all things technology. A deep fascination with computers has lead me to study Computer Science and Engineering.<br><br></p3>
+                <p3>A deep fascination with computers has lead me to study Computer Science and Engineering.<br><br></p3>
                 <p4>Learning by doing</p4>
                 <p5><br>I'm always on the lookout for new ways to learn and grow my skills.</p5>
                 <p6>
@@ -80,6 +80,8 @@
                     <li>Data Structures and Algorithms</li>
                     <li>Logic Design, Multisim, Vivado, VHDL, FPGAs</li>
                     <li>Calculus I, II, III</li>
+                    <li>Differential Equations</li>
+                    <li>Discrete Structures/Mathematics</li>
                 </ul>
             </div>
         </section>
@@ -138,8 +140,8 @@
             <div class="projects-text">
                 <p1>/</p1>
                 <p2>projects<br></p2>
-                <p3>a commitment to open-source<br></p3>
-                <p4>As an avid supporter of Free and Open-Source Software (FOSS), all my projects are open-source (including this website!)<br><br></p4>
+                <p3>A commitment to open-source<br></p3>
+                <p4>As a supporter of Free and Open-Source Software (FOSS), all my projects are open-source (including this website!)<br><br></p4>
                 <p5><br>featured project<br></p5>
                 <p6><a href="https://www.zenodoro.com/">Zenodoro<br></a></p6>
                 <p7>Relaxing, zen-themed pomodoro timer</p7>
