--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="contact-text">
                 <p1>/</p1>
                 <p2>contact<br></p2>
-                <p3>let's get in touch<br><br></p3>
+                <p3>Let's get in touch<br><br></p3>
                 <p4>email<br></p4>
                 <p5><a onclick="copyEmail()" id="email">site.coleswinford@gmail.com</a></p5>
                 <p6><br><br><br>platforms<br></p6>
