--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <li>HTML, CSS, JavaScript</li>
                     <li>SQL</li>
                     <li>C#, XAML</li>
+                    <li>Git, Docker, Kubernetes</li>
                     <li>Data Structures and Algorithms</li>
                     <li>Logic Design, Multisim, Vivado, VHDL, FPGAs</li>
                     <li>Calculus I, II, III</li>
@@ -98,7 +99,7 @@
                 <p2>experience<br></p2>
                 <p3>Status...</p3>
                 <span>
-                    <p4>Software Solutions Engineer Co-op @ </p4>
+                    <p4>Software Engineer Co-op @ </p4>
                     <p5><a href="https://www.igear.com/">iGear</a></p5>
                 </span>
                 <p6><br><br><br></p6>
@@ -112,14 +113,14 @@
                     }
                 </style>
                 <ul class="companies">
-                    <li><a onclick="changeText('iGear')">iGear</a></li>
-                    <!-- <li><a onclick="changeText('company2')">Option 2</a></li> -->
+                    <li><a onclick="changeText('iGear Co-op I')">iGear Co-op I</a></li>
+                    <li><a onclick="changeText('iGear Co-op II')">iGear Co-op II</a></li>
                     <!-- <li><a onclick="changeText('company3')">Option 3</a></li> -->
                 </ul>
                 
                 <div id=exp-container>
                     <div id="title-display">
-                        Software Solutions Engineer Co-op
+                        Software Engineer Co-op
                     </div>
                     <div>
                         <a href="https://www.igear.com/" id="company-display">iGear</a>
