--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <li>Java</li>
                     <li>HTML, CSS, JavaScript</li>
                     <li>SQL</li>
-                    <li>C#, XAML</li>
+                    <li>C#, .NET, XAML</li>
                     <li>Git, Docker, Kubernetes</li>
                     <li>Data Structures and Algorithms</li>
                     <li>Logic Design, Multisim, Vivado, VHDL, FPGAs</li>
