updated about me

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="about-text">
                 <p1>/</p1>
                 <p2>about me<br></p2>
-                <p3>A deep fascination with computers has lead me to study Computer Science and Engineering.<br><br></p3>
+                <p3>A deep fascination with computers has lead me to study Computer Science and Engineering. I enjoy working with others to solve complex engineering problems.<br><br></p3>
                 <p4>Learning by doing</p4>
                 <p5><br>I'm always on the lookout for new ways to learn and grow my skills.</p5>
                 <p6>
