Mobile patches & experience updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>        
         <!--Basic setup-->
         <title>Cole Swinford</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width">
         <meta name="description" content="Computer Science Engineer&mdash;I build things.">
         <meta name="author" content="Cole Swinford">
         <link rel="stylesheet" href="style.css">
