--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
                     <li>Python</li>
                     <li>Java</li>
                     <li>HTML, CSS, JavaScript</li>
+                    <li>React framework: JavaScript, TypeScript</li>
                     <li>SQL</li>
-                    <li>C#, .NET, XAML</li>
+                    <li>.NET, C#, XAML</li>
                     <li>Git, Docker, Kubernetes</li>
                     <li>Data Structures and Algorithms</li>
                     <li>Logic Design, Multisim, Vivado, VHDL, FPGAs</li>
