updated skills and experience

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                     <li>Python</li>
                     <li>Java</li>
                     <li>HTML, CSS, JavaScript</li>
-                    <li>React framework: JavaScript, TypeScript</li>
+                    <li>ASP .NET Razor/Blazor frameworks</li>
+                    <li>Typescript</li>
                     <li>SQL</li>
                     <li>.NET, C#, XAML</li>
                     <li>Git, Docker, Kubernetes</li>
