--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
                 <ul class="companies">
                     <li><a onclick="changeText('iGear Co-op I')">iGear Co-op I</a></li>
                     <li><a onclick="changeText('iGear Co-op II')">iGear Co-op II</a></li>
-                    <!-- <li><a onclick="changeText('company3')">Option 3</a></li> -->
+                    <li><a onclick="changeText('iGear Co-op III')">iGear Co-op III</a></li>
+                    <!-- <li><a onclick="changeText('company3')">Option n</a></li> -->
                 </ul>
                 
                 <div id=exp-container>
