updated work descriptions

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li>ASP .NET Razor/Blazor frameworks</li>
                     <li>Typescript</li>
                     <li>SQL</li>
-                    <li>.NET, C#, XAML</li>
+                    <li>.NET, C#</li>
                     <li>Git, Docker, Kubernetes</li>
                     <li>Data Structures and Algorithms</li>
                     <li>Logic Design, Multisim, Vivado, VHDL, FPGAs</li>
@@ -102,10 +102,10 @@
                 <p3>Status...</p3>
                 <span>
                     <p4>Software Engineer Co-op @ </p4>
-                    <p5><a href="https://www.igear.com/">iGear</a></p5>
+                    <p5><a href="https://www.IGear.com/">IGear</a></p5>
                 </span>
                 <p6><br><br><br></p6>
-                <!-- <p5><a onclick="" class="company1">iGear Online</a></p5> -->
+                <!-- <p5><a onclick="" class="company1">IGear Online</a></p5> -->
                 <style>
                     .companies{
                       list-style-type: none;
@@ -115,9 +115,9 @@
                     }
                 </style>
                 <ul class="companies">
-                    <li><a onclick="changeText('iGear Co-op I')">iGear Co-op I</a></li>
-                    <li><a onclick="changeText('iGear Co-op II')">iGear Co-op II</a></li>
-                    <li><a onclick="changeText('iGear Co-op III')">iGear Co-op III</a></li>
+                    <li><a onclick="changeText('IGear Co-op I')">IGear Co-op I</a></li>
+                    <li><a onclick="changeText('IGear Co-op II')">IGear Co-op II</a></li>
+                    <li><a onclick="changeText('IGear Co-op III')">IGear Co-op III</a></li>
                     <!-- <li><a onclick="changeText('company3')">Option n</a></li> -->
                 </ul>
                 
@@ -126,7 +126,7 @@
                         Software Engineer Co-op
                     </div>
                     <div>
-                        <a href="https://www.igear.com/" id="company-display">iGear</a>
+                        <a href="https://www.IGear.com/" id="company-display">IGear</a>
                     </div>
                     <div id="dates-display">
                         January - May 2023
