--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 <p2>experience<br></p2>
                 <p3>Status...</p3>
                 <span>
-                    <p4>Software Engineer Co-op @ </p4>
-                    <p5><a href="https://www.IGear.com/">IGear</a></p5>
+                    <p4>searching new grad 2025</p4>
+                    <p5><a href=""></a></p5>
                 </span>
                 <p6><br><br><br></p6>
                 <!-- <p5><a onclick="" class="company1">IGear Online</a></p5> -->
