updated Zenodoro link

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <p3>A commitment to open-source<br></p3>
                 <p4>As a supporter of Free and Open-Source Software (FOSS), all my projects are open-source (including this website!)<br><br></p4>
                 <p5><br>featured project<br></p5>
-                <p6><a href="https://www.zenodoro.com/">Zenodoro<br></a></p6>
+                <p6><a href="https://github.com/ColeSwinford/Zenodoro">Zenodoro<br></a></p6>
                 <p7>Relaxing, zen-themed pomodoro timer</p7>
                 <img class="featured" viewBox="0 0 auto auto" preserveAspectRatio="meet" src="images/zenodoro.png">
             </div>
