updated skills and experience

--- a/index.html
+++ b/index.html
@@ -71,16 +71,19 @@
                 </p8>
                 <p7>Skills<br></p7>
                 <ul>
-                    <li>C, C++</li>
-                    <li>Python</li>
-                    <li>Java</li>
+                    <li>C, C++, C#, .NET</li>
                     <li>HTML, CSS, JavaScript</li>
-                    <li>ASP .NET Razor/Blazor frameworks</li>
-                    <li>Typescript</li>
+                    <li>Python</li>
                     <li>SQL</li>
-                    <li>.NET, C#</li>
-                    <li>Git, Docker, Kubernetes</li>
+                    <li>Java</li>
+                    <li>Linux</li>
+                    <li>Git/Version Control</li>
+                    <li>Virtualization</li>
+                    <li>Docker and containers, Kubernetes</li>
+                    <li>Project Management</li>
                     <li>Data Structures and Algorithms</li>
+                    <li>Design & Operating Systems</li>
+                    <li>Machine Learning</li>
                     <li>Logic Design, Multisim, Vivado, VHDL, FPGAs</li>
                     <li>Calculus I, II, III</li>
                     <li>Differential Equations</li>
