Added mailto attempt for email

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <p2>contact<br></p2>
                 <p3>Let's get in touch<br><br></p3>
                 <p4>email<br></p4>
-                <p5><a onclick="copyEmail()" id="email">site.coleswinford@gmail.com</a></p5>
+                <p5><a onclick="copyEmailto()" id="email">site.coleswinford@gmail.com</a></p5>
                 <p6><br><br><br>platforms<br></p6>
                 <ul>
                     <a href="https://github.com/ColeSwinford" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
