--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p7>Skills<br></p7>
                 <ul>
                     <li>C, C++, C#, .NET</li>
-                    <li>HTML, CSS, JavaScript</li>
+                    <li>HTML, CSS, XML, JavaScript</li>
                     <li>Python</li>
                     <li>SQL</li>
                     <li>Java</li>
