--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     <li>Python</li>
                     <li>SQL</li>
                     <li>Java</li>
+                    <li>Cloud Computing (AWS, GCP, Azure)</li>
                     <li>Linux</li>
                     <li>Git/Version Control</li>
                     <li>Virtualization</li>
