--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 </p8>
                 <p7>Skills<br></p7>
                 <ul>
-                    <li>C, C++, C#, .NET</li>
+                    <li>C, C++, Assembly</li>
+                    <li>C#, .NET</li>
                     <li>HTML, CSS, XML, JavaScript</li>
                     <li>Python</li>
                     <li>SQL</li>
